src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lost_to_which_Competitor__c</fullName>
        <label>Lost to which Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>City AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express - Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror Saturday - We Love Telly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Saturday - Hot Tv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday - Ok Extra/Take 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Times Saturday- Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Listings/ Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Weekend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent &amp; I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday (B/t)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday - Review (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday(B/bl)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday - Observer Mag (A4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Of_Rooms__c</fullName>
        <label>Number Of Rooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Sold__c</fullName>
        <label>Number Sold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>The Wowcher Opportunity Type. This is needed to determine what Opportunity Record Type should be used to create the Opportunity.</description>
        <label>Pitch Type</label>
        <picklist>
            <picklistValues>
                <fullName>ECommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InStore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Reactive__c</fullName>
        <label>Proactive/Reactive</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size_of_ad__c</fullName>
        <label>Size of ad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_description__c</fullName>
        <label>Source description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <formula>IMAGE(CASE( Rating, &quot;Very Cold&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;Cold&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;Warm&quot;, &quot;/img/samples/stars_300.gif&quot;,&quot;Hot&quot;, &quot;/img/samples/stars_400.gif&quot;,&quot;/img/samples/stars_500.gif&quot;),&quot;Rating&quot;)</formula>
        <inlineHelpText>This is a sample formula field that displays stars based on the lead&apos;s rating.</inlineHelpText>
        <label>Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>Wowcher Sub Category. Dependent Picklist from Category</description>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Ab Toners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure &amp; Theme Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anklet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baby/Prenatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathroom Suites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty Electricals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Linens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedroom Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Betting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bingo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blepharoplasty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodycare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Sculpting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bootcamps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>This_Deal_Expires__c</fullName>
        <description>Wowcher</description>
        <label>This Deal Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman/CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Press Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Of Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media/Press Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planner/Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Director</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Advertiser</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__AddressStatus__c</fullName>
        <label>Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Agency__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Agency__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Agency__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Agency__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Media_Lead</fullName>
        <active>true</active>
        <businessProcess>New Business</businessProcess>
        <description>Leads gathered from competitors</description>
        <label>Media Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewBusiness</fullName>
        <active>true</active>
        <businessProcess>New Business</businessProcess>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wowcher</fullName>
        <active>true</active>
        <businessProcess>Wowcher</businessProcess>
        <description>For Wowcher Only</description>
        <label>Wowcher</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AdSize_if_not_newspaper</fullName>
        <active>true</active>
        <errorConditionFormula>Lead_Record_Type_Name__c!=&apos;Wowcher&apos; &amp;&amp;
!(ISBLANK( Date_of_Publication__c ) &amp;&amp;
ISBLANK( text(Competitor__c )) &amp;&amp;
ISBLANK( Brand_Product__c ) &amp;&amp;
ISBLANK(Size_of_ad__c) &amp;&amp;
ISBLANK( Page__c ))
&amp;&amp;
! ISPICKVAL(LeadSource,&apos;Newspaper&apos;)
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorMessage>Date of Publication, Competitor, Brand, Page and Size fields must be empty when Lead Source is not &apos;Newspaper&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AdSize_if_source_newspaper</fullName>
        <active>true</active>
        <errorConditionFormula>(Lead_Record_Type_Name__c != &apos;Wowcher&apos;  ||  Lead_Record_Type_Name__c !=&apos;Media Lead&apos;) &amp;&amp; 
(ISBLANK( Date_of_Publication__c ) ||
ISBLANK( text(Competitor__c )) ||
ISBLANK( Brand_Product__c ) ||
ISBLANK(Size_of_ad__c) ||
ISBLANK( Page__c ))
&amp;&amp;
 ISPICKVAL(LeadSource,&apos;Newspaper&apos;)
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorMessage>Date of Publication, Competitor, Brand, Page and Size must be specified when Lead Source is &apos;Newspaper&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AgencyMandatoryForClient</fullName>
        <active>true</active>
        <errorConditionFormula>Lead_Record_Type_Name__c!=&apos;Wowcher&apos; &amp;&amp;
AND(  ISPICKVAL(Type__c  , &apos;Client&apos;) ,   ISBLANK(Agency__c ))
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Agency__c</errorDisplayField>
        <errorMessage>Agency must be populated when Lead Type is Client</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingAddrRequiredOnAgencyDirectAdv</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Direct Advertiser&apos;) &amp;&amp; (ISBLANK(Street) || ISBLANK(PostalCode))
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Street</errorDisplayField>
        <errorMessage>For Direct Advertisers Street and Postal Code fields are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckPhoneFormat</fullName>
        <active>true</active>
        <description>Phone Field shouldn&apos;t allow text to be added.</description>
        <errorConditionFormula>!REGEX(Phone, &apos;[0-9-()+/ ]*&apos;)
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Text cannot be added to Phone field!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_is_Other</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(LeadSource,&apos;Other&apos;) &amp;&amp; ISBLANK( Source_description__c )
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Source_description__c</errorDisplayField>
        <errorMessage>Source descriptiom must be populated when Lead Source is &apos;Other&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LossReasonLeadStatusUnqualifed</fullName>
        <active>true</active>
        <description>If Loss reason is set Lead Status must be Unqualified. If Lead Status is Unqualified, Loss reason must be set.</description>
        <errorConditionFormula>( !(ISBLANK(TEXT(Loss_Reason__c))) &amp;&amp; !(ISPICKVAL(Status, &apos;Unqualified&apos;)) ) || ( ISBLANK(TEXT(Loss_Reason__c)) &amp;&amp; ISPICKVAL(Status, &apos;Unqualified&apos;) )
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorMessage>If Loss Reason is set Lead Status must be Unqualified. If Lead Status is Unqualified, Loss Reason must be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loss_descritpion</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(Loss_Reason__c,&apos;Other&apos;) &amp;&amp;  ISBLANK(Close_Reason_Description__c)
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Close_Reason_Description__c</errorDisplayField>
        <errorMessage>When reason for not qualifying reason is &apos;Other&apos;, Description must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LostToCompetitor</fullName>
        <active>true</active>
        <description>If Loss Reason is &apos;Lost to Competitor&apos;, competitor must be selected.</description>
        <errorConditionFormula>ISPICKVAL(Loss_Reason__c, &apos;Lost to Competitor&apos;) &amp;&amp; ISBLANK(TEXT(Lost_to_which_Competitor__c))
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Lost_to_which_Competitor__c</errorDisplayField>
        <errorMessage>If Loss Reason is &apos;Lost to Competitor&apos;, competitor must be selected!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryFieldsForLeadWhenRegionTravel</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Opportunity_Type__c, &apos;InStore&apos;) 
&amp;&amp; ISPICKVAL( Region__c , &apos;Travel&apos;) 
&amp;&amp; ( ISNULL(Book_By__c) 
|| ISNULL(Number_Of_Rooms__c )) 
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorMessage>If the Deal Region is Travel then both the Book By Date and the Number of Rooms have to be populated.</errorMessage>
    </validationRules>
</CustomObject>